--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -17,25 +17,43 @@ jobs:
       with:
         path: "repo"
 
-    - uses: conda-incubator/setup-miniconda@v2
+    - uses: actions/setup-python@v2
       with:
-        activate-environment: "project-causica"
-        auto-activate-base: false
-        use-only-tar-bz2: true
+        python-version: "3.8"
 
     - uses: actions/cache@v3
       with:
-        path: /usr/share/miniconda/envs/project-causica
-        key: ${{ hashFiles('repo/environment.yml') }}
+        path: ~/.cache/pypoetry/virtualenvs
+        key: ${{ hashFiles('repo/poetry.lock') }}
       id: cache
+    
+    - name: Install poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python3 - --preview
 
     - name: Install dependencies
+      shell: bash -l {0}
       run: |
-        $CONDA/bin/conda env update --file repo/environment.yml
+        cd repo
+        poetry install
       if: steps.cache.outputs.cache-hit != 'true'
 
     - name: Test with pytest
       shell: bash -l {0}
       run: |
         cd repo
-        python -m pytest ./tests/unit_tests
+        poetry run python -m pytest ./tests/unit_tests
+
+    - name: Create build artifact
+      shell: bash -l {0}
+      run: |
+        cd repo
+        poetry build
+
+    - name: Upload build artifact
+      # if: github.ref == 'refs/heads/main' # only create artifacts on push to main
+      uses: actions/upload-artifact@v3
+      with:
+        name: Build artifacts
+        path: ./repo/dist
+        retention-days: 90
