--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "causica"
-version = "0.3.1"
+version = "0.3.2"
 description = ""
 readme = "README.md"
 authors = []
@@ -18,6 +18,7 @@ numpy = "^1.22.4"
 pandas = "^1.4.2"
 tensorboard = "^2.9.0"
 pytorch-lightning = {version = "^1.9.0", extras= ["extra"]}
+jsonargparse = "<4.21.0"  # 4.21.0 breaks lightning cli
 dataclasses-json = "^0.5.7"
 types-PyYAML = "^6.0.12.2"
 tensordict = "^0.1.0"
