--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [tool.poetry]
 name = "causica"
-version = "0.3.2"
+version = "0.3.3"
 description = ""
 readme = "README.md"
 authors = []
 packages = [
-    { include = "causica", from = "src" },
-    { include = "examples", from = "." },
+    { include = "causica", from = "src" }
 ]
 license = "MIT"
 
@@ -22,7 +21,7 @@ jsonargparse = "<4.21.0"  # 4.21.0 breaks lightning cli
 dataclasses-json = "^0.5.7"
 types-PyYAML = "^6.0.12.2"
 tensordict = "^0.1.0"
-torch = "^2.0.0"
+torch = "2.0.0"
 numba = "^0.56.0"  # needed to make the build work
 
 [tool.poetry.dev-dependencies]
