--- a/src/causica/config/lightning/default_gaussian.yaml
+++ b/src/causica/config/lightning/default_gaussian.yaml
@@ -5,8 +5,8 @@ model:
     noise_dist: "GAUSSIAN"
     embedding_size: 32
     out_dim_g: 32
-    norm_layer: true
-    res_connection: true
+    num_layers_g: 2
+    num_layers_zeta: 2
     init_alpha: 0.0
     init_rho: 1.0
     prior_sparsity_lambda: 5.0
@@ -18,7 +18,7 @@ model:
         lr_update_lag_best: 250
         lr_init_dict:
           vardist: 0.01
-          icgnn: 0.01
+          functional_relationships: 0.01
           noise_dist: 5e-3
         aggregation_period: 20
         lr_factor: 0.1
