--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Verify pre-commit checks
       uses: pre-commit/action@v3.0.0
       with:
-        extra_args: run --all-files
+        extra_args: --all-files
 
     - name: Test with pytest
       run: poetry run python -m pytest ./test
