--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -14,47 +14,41 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-      with:
-        path: "repo"
 
     - uses: actions/setup-python@v2
       with:
-        python-version: "3.9"
+        python-version: "3.10"
 
     - uses: actions/cache@v3
       with:
         path: ~/.cache/pypoetry/virtualenvs
-        key: ${{ hashFiles('repo/poetry.lock') }}
+        key: ${{ hashFiles('poetry.lock') }}
       id: cache
-    
+
     - name: Install poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
 
     - name: Install dependencies
-      shell: bash -l {0}
       run: |
-        cd repo
-        poetry env use 3.9
+        poetry env use 3.10
         poetry install
       if: steps.cache.outputs.cache-hit != 'true'
 
+    - name: Verify pre-commit checks
+      uses: pre-commit/action@v3.0.0
+      with:
+        extra_args: --all-files
+
     - name: Test with pytest
-      shell: bash -l {0}
-      run: |
-        cd repo
-        poetry run python -m pytest ./test
+      run: poetry run python -m pytest ./test
 
     - name: Create build artifact
-      shell: bash -l {0}
-      run: |
-        cd repo
-        poetry build
+      run: poetry build
 
     - name: Upload build artifact
-      # if: github.ref == 'refs/heads/main' # only create artifacts on push to main
       uses: actions/upload-artifact@v3
       with:
         name: Build artifacts
-        path: ./repo/dist
+        path: ./dist
         retention-days: 90
