--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -1,6 +1,7 @@
 on:
-  pull_request:
+  push:
     branches: [ "main" ]
+    paths: ["**.py"]  # only push new packages when python files have changed
 jobs:
   pypi-publish:
     name: Upload release to PyPI
@@ -17,12 +18,6 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: "3.10"
-
-    - uses: actions/cache@v3
-      with:
-        path: ~/.cache/pypoetry/virtualenvs
-        key: ${{ hashFiles('poetry.lock') }}
-      id: cache
 
     - name: Install poetry
       run: |
