add permision pypi publish

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -1,6 +1,13 @@
 on:
   release:
     types: [released]
+permissions:
+  actions: read
+  contents: read
+  deployments: read
+  packages: none
+  pull-requests: write
+  security-events: write
 jobs:
   pypi-publish:
     name: Upload release to PyPI
