Updated to "Move log transform to causica"

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         poetry env use 3.10
-        poetry install
+        poetry install --extras seaborn
       if: steps.cache.outputs.cache-hit != 'true'
 
     - name: Verify pre-commit checks
