--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,25 +25,29 @@
 	"customizations": {
 		"vscode": {
 			"settings": {
+				// General
+				"editor.rulers": [120],
+				"terminal.integrated.profiles.linux": {
+					"zsh": {"path": "/usr/bin/zsh"}
+				},
+				"terminal.integrated.defaultProfile.linux": "zsh",
+
+				// Python
+				"[python]": {
+					"editor.defaultFormatter": "ms-python.black-formatter"
+				},
 				"python.defaultInterpreterPath": "/usr/bin/python",
-				"python.formatting.black": true,
-				"python.linting.pylint": true,
 				"python.testing.pytestEnabled": true,
 				"python.testing.pytestArgs": [
 					"--continue-on-collection-errors",
 					"test"
 				],
 				"python.testing.unittestEnabled": false,
-				"vim.textwidth": 120,
-				"editor.rulers": [
-					120
-				],
-				"terminal.integrated.profiles.linux": {
-					"zsh": {
-						"path": "/usr/bin/zsh"
-					}
-				},
-				"terminal.integrated.defaultProfile.linux": "zsh"
+
+				// Extensions
+				"isort.args": ["--resolve-all-configs"],
+				"black-formatter.args": ["--config=./pyproject.toml"],
+				"vim.textwidth": 120
 			},
 			"extensions": [
 				"bungcip.better-toml",
@@ -51,6 +55,7 @@
 				"github.copilot-chat",
 				"github.copilot-labs",
 				"ms-azuretools.vscode-docker",
+				"ms-python.black-formatter",
 				"ms-python.isort",
 				"ms-python.pylint",
 				"ms-python.python",
