--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
   hooks:
   - id: isort
     name: isort
-    entry: poetry run isort
+    entry: poetry run isort --resolve-all-configs
     language: system
     types: [python]
 - repo: local
