--- a/.github/workflows/sphinx-build.yml
+++ b/.github/workflows/sphinx-build.yml
@@ -20,11 +20,12 @@ concurrency:
   cancel-in-progress: false
 
 env:
-  PYTHON_VERSION: 3.10
+  PYTHON_VERSION: "3.10"
   POETRY_NO_INTERACTION: 1
   POETRY_VIRTUALENVS_CREATE: false
   POETRY_VIRTUALENVS_IN_PROJECT: false
-  POETRY_VERSION: 1.8.2
+  POETRY_VERSION: "1.8.2"
+
 
 jobs:
   build:
