--- a/.github/workflows/sphinx-build.yml
+++ b/.github/workflows/sphinx-build.yml
@@ -22,7 +22,7 @@ concurrency:
 env:
   PYTHON_VERSION: "3.10"
   POETRY_NO_INTERACTION: 1
-  POETRY_VIRTUALENVS_CREATE: false
+  POETRY_VIRTUALENVS_CREATE: true
   POETRY_VIRTUALENVS_IN_PROJECT: false
   POETRY_VERSION: "1.8.2"
 
