Run make html in poetry env

--- a/.github/workflows/sphinx-build.yml
+++ b/.github/workflows/sphinx-build.yml
@@ -55,20 +55,12 @@ jobs:
         poetry install --with dev
       if: steps.cache.outputs.cache-hit != 'true'
 
-    - name: Verify pre-commit checks
-      uses: pre-commit/action@v3.0.0
-      with:
-        extra_args: --all-files
-
-    - name: Test with pytest
-      run: poetry run python -m pytest ./test
-
     - name: Setup Pages
       id: pages
       uses: actions/configure-pages@v5
 
     - name: Build docs with Sphinx
-      run: make html
+      run: poetry run make html
       working-directory: docs
 
     - name: Upload docs
